# Qt6_ImageProcess

./: .gitignore  CMakeLists.txt  README.md  confirmpage.cpp  confirmpage.h  confirmpage.ui  const.h  filetree.cpp  filetree.h  filetree.ui  filetreeitem.cpp  filetreeitem.h  filetreethread.cpp  filetreethread.h  filetreewidget.cpp  filetreewidget.h  imgprocess.cpp  imgprocess.h  imgshow.cpp  imgshow.h  imgshow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfilepage.cpp  openfilepage.h  openfilepage.ui  openfilethread.cpp  openfilethread.h  quantization.cpp  quantization.h  quantization.ui  removefiledialog.cpp  removefiledialog.h  removefiledialog.ui  res.qrc  showsplitimg.cpp  showsplitimg.h  toolwidget.cpp  (+5 more)
style/: style.qss
